# metamath-knife

metamath-knife/: Cargo.toml
metamath-knife/src/: main.rs
metamath-rs/: Cargo.toml
metamath-rs/src/: bit_set.rs  database.rs  diag.rs  formula.rs  lib.rs  nameck.rs  parser.rs  proof.rs  scopeck.rs  segment.rs  segment_set.rs  statement.rs  util.rs  verify.rs
