[package]
name = "metamath-knife"
readme = "metamath-knife/README.md"
description = "A command-line tool for Metamath, including parallel and incremental verifier for Metamath databases"
version = "0.3.8"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2021"

[dependencies]
clap = "2.33"
metamath-rs = { path = "../metamath-rs" }
filetime = "0.2"
ron = "0.8"

[[bin]]
name = "metamath-knife"
path = "src/main.rs"
doc = false
