[package]
name = "metamath-rs"
readme = "README.md"
description = "A library manipulating Metamath databases, including a parallel and incremental verifier for Metamath databases"
version = "0.3.8"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition = "2021"

[dependencies]
itertools = "0.12"
filetime = "0.2"
fnv = "1.0"
regex = { version = "1.5", default-features = false, features = ["std", "perf"] }
annotate-snippets = "0.9"
typed-arena = "2.0"
serde = {version =  "1.0", features = ["derive", "rc"]}


[dev-dependencies]
assert_matches = "1.5"
